--- a/src/app.html
+++ b/src/app.html
@@ -4,8 +4,13 @@
 
   <grid view-model.ref="grid" rows.bind="people" class="table table-condensed table-bordered">
     <column header="index">${$index}</column>
-    <column header="first name">${row.firstName}</column>
-    <column header="last name">${row.lastName}</column>
+    <column header="first name">
+      <compose view="first-name-view.html"></compose>
+    </column>
+    <column header="last name">
+      <compose view-model="last-name" model.bind="row"></compose>
+    </column>
     <column header="value">${row.value}</column>
   </grid>
+
 </template>
