--- a/src/app.html
+++ b/src/app.html
@@ -1,16 +1,10 @@
 <template>
-  <require from="./grid/grid"></require>
-  <require from="./grid/column"></require>
+  <require from="nav-bar.html"></require>
+  <require from="bootstrap/css/bootstrap.css"></require>
 
-  <grid view-model.ref="grid" rows.bind="people" class="table table-condensed table-bordered">
-    <column header="index">${$index}</column>
-    <column header="first name">
-      <compose view="first-name-view.html"></compose>
-    </column>
-    <column header="last name">
-      <compose view-model="last-name" model.bind="row"></compose>
-    </column>
-    <column header="value">${row.value}</column>
-  </grid>
+  <nav-bar router.bind="router"></nav-bar>
 
+  <div class="page-host">
+    <router-view></router-view>
+  </div>
 </template>
