--- a/src/test/test.html
+++ b/src/test/test.html
@@ -1,19 +1,12 @@
 <template>
-  <require from="../grid/grid"></require>
-  <require from="../grid/column"></require>
-
-  <grid view-model.ref="grid" rows.bind="people" class="table table-condensed table-bordered">
-    <column header="first name">${row.firstName}</column>
-    <column header="last name">${row.lastName}</column>
-    <column header="value">${row.value}</column>
-
-
-    <!--<column header="first name">
-      <compose view="first-name-view.html"></compose>
-    </column>
-    <column header="last name">
-      <compose view-model="last-name" model.bind="row"></compose>
-    </column>
-    <column header="value">${row.value}</column>-->
-  </grid>
+  <au-grid view-model.ref="grid" rows.bind="people" class="table table-condensed table-bordered">
+    <au-column header="first name">
+      <compose view="test/first-name-view.html"></compose>
+    </au-column>
+    <au-column header="last name">
+      <compose view-model="test/last-name" model.bind="row"></compose>
+    </au-column>
+    <au-column header="value">${row.value}</au-column>
+  </au-grid>
 </template>
+
