--- a/src/demo/demo.html
+++ b/src/demo/demo.html
@@ -1,10 +1,10 @@
 <template>
   <au-grid view-model.ref="grid" rows.bind="people" class="table table-condensed table-bordered">
     <au-column header="first name">
-      <compose view="test/first-name-view.html"></compose>
+      <compose view="demo/first-name-view.html"></compose>
     </au-column>
     <au-column header="last name">
-      <compose view-model="test/last-name" model.bind="row"></compose>
+      <compose view-model="demo/last-name" model.bind="row"></compose>
     </au-column>
     <au-column header="value">${row.value}</au-column>
   </au-grid>
